# data_engineering_azure

./: .gitattributes  .gitignore  .gitmodules  README.md  docker-compose-pagila.yml  pyproject.toml
courses/cloud_data_warehouses/lesson 2/: E1 - Step 1 & 2.ipynb  E1 - Step 3.ipynb  E1 - Step 4.ipynb  E1 - Step 5.ipynb  E1 - Step 6.ipynb  E2 - 1 - Slicing and Dicing.ipynb  E2 - 2 - Roll up and Drill Down.ipynb  E2 - 3 - Grouping Sets.ipynb  E2 - 4 - CUBE.ipynb  E3 - Columnar Vs Row Storage.ipynb
courses/cloud_data_warehouses/project/: README.md  project_data_to_postgres.py
courses/data_lakes_and_lakehouses/lesson 3/: 3_data_inputs_and_outputs.ipynb  4_data_wrangling.ipynb  5_dataframe_quiz.ipynb  7_data_wrangling-sql.ipynb  8_spark_sql_quiz.ipynb  test_spark.py
courses/data_lakes_and_lakehouses/lesson 4/: repartition.ipynb
courses/data_lakes_and_lakehouses/project/: README.md  divvy_bikeshare.ipynb  divvy_erd.mmd
courses/data_modelling/: L1E1_Creating_a_Table_with_Postgres.ipynb  L1E2_Creating_a_Table_with_Apache_Cassandra.ipynb  L1_Exercise_1_Creating_a_Table_with_Postgres.ipynb  L1_Exercise_2_Creating_a_Table_with_Apache_Cassandra.ipynb  L2E1_Creating_Normalized_Tables.ipynb  L2E2_Creating_Denormalized_Tables.ipynb  L2E3_Creating_Fact_and_Dimension_Tables_with_Star_Schema.ipynb
courses/data_modelling/lesson 1/: E1_Creating_a_Table_with_Postgres.ipynb  E2_Creating_a_Table_with_Apache_Cassandra.ipynb
courses/data_modelling/lesson 2/: E1_Creating_Normalized_Tables.ipynb  E2_Creating_Denormalized_Tables.ipynb  (+1 more)
docker/: docker-compose-cassandra.yml  docker-compose-citus.yml  docker-compose-postgres.yml
docker/citus/: Dockerfile
docker/spark/: Dockerfile  docker-compose.yml  entrypoint.sh  requirements.txt
docker/spark-dbx/: Dockerfile  docker-compose.yml  entrypoint.sh  requirements.txt
docker/spark/conf/: spark-defaults.conf
src/: .env.example  config.py  database.py  spark_lakehouse.py
(+43 files in other folders)
