[build-system]
requires = ["setuptools"]

[project]
name = "data_engineering_azure"
version = "0.1.0"
description = "Udacity course for data engineering with Azure"
authors = [
    { name = "Philip Soliman", email = "philipsoliman4133@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.11,<3.12"
license = "MIT"
dependencies = [
    "psycopg2==2.9.11",
    "pydantic==2.12.5",
    "pydantic_settings==2.12.0",
    "jupyter==1.1.1",
    "ipykernel==7.1.0",
    "cassandra-driver==3.29.3",
    "isort==7.0.0",
    "black[jupyter]==25.12.0",
    "nbstripout==0.8.2",
    "numpy==2.3.5",
    "pandas==2.3.3",
    "pyspark==3.5.7",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.isort]
profile = "black"

[project.urls]
Homepage = "https://github.com/PhilipSoliman/data_engineering_azure"
Documentation = "https://github.com/PhilipSoliman/data_engineering_azure/blob/main/README.md"
Source = "https://github.com/PhilipSoliman/data_engineering_azure"